crates/swc_ecma_parser/tests/flow/type_guards/invalid/not_in_return_position_1.js
type T = x is number;
